# ctOS

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
ctOS/driver/binance/: Normalizer.py  __init__.py  normalize.py
ctOS/driver/telegram/: Notifier.py
ctOS/kernel/: Candles.py  Indicator.py  Order.py  Signal.py  __init__.py
ctOS/std/: Candles.py  Indicator.py  Predicate.py  Signal.py  __init__.py
ctos/: func.py
ctos/driver/: __init__.py
ctos/driver/binance/: BinanceFutures.py  CandleStreamFilter.py  Interval.py  JSON.py  __init__.py  normalize.py
ctos/std/: Candles.py  Indicator.py  Predicate.py  __init__.py
